app/frontend/scss/section/header.scss
body {
    background: none #f39c12;
    color: #fff;
    font-family: 'Helvetica', sans-serif;
    font-size: 16px;
    text-align: center;
}
header.main {
    margin-bottom: 30px;
}
.site-icon {
    color: #fff;
    font-size: 75px;
    margin-top: 40px;
    position: relative;
}
.site-icon:after {
    bottom: 1.5em;
    color: #f39c12;
    content: attr(data-icon-text);
    font-family: 'Helvetica', sans-serif;
    font-size: 11px;
    font-weight: bold;
    left: 0;
    line-height: 1;
    position: absolute;
    right: 0;
    text-align: center;
}
.site-name {
    display: inline-block;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 75px;
    margin-bottom: 0;
    margin-left: 30px;
}
a {
    color: #FFF;
    text-decoration: none;
}
p {
    margin-top: 10px;
    font-size: 16px;
}
form {
    text-align: left;
}
.form-control {
    margin: 25px 0;
}
.form-action {
    margin: 0;
}
.text-field,
.button {
    background: none #fff;
    border-radius: 2px;
    border: none;
    box-shadow: none;
    display: block;
    line-height: normal;
    padding: 8px 10px;
    width: 100%;
}
.text-field {
    margin: 0 auto;
    color: #000;
}
textarea {
    resize: vertical;
    min-height: 150px;
}
.button {
    background: #e67e22;
    border: 1px solid transparent;
    color: #fff;
    font-family: 'Josefin Sans', sans-serif;
    font-size: 20px;
    margin: 0;
    text-align: center;
}
.button:focus {
    border: 1px solid #fff;
}
::-webkit-input-placeholder {
    color: #f39c12;
    opacity: 1;
}
:-moz-placeholder {
    color: #f39c12;
    opacity: 1;
}
::-moz-placeholder {
    color: #f39c12;
   opacity: 1;
}
:-ms-input-placeholder {
   color: #f39c12;
}
.help-block {
    display: block;
    margin-bottom: 5px;
}

.poem {
    background: none repeat scroll 0 0 white;
    border-radius: 3px;
    color: #f39c12;
    margin: 20px 0;
    padding: 30px 45px;
    text-align: left;

    .poem-title {
        font-family: 'Josefin Sans', sans-serif;
        font-size: 30px;
        line-height: 1.25;
        margin: 5px 0 25px;
    }
    .poem-text {
        line-height: 1.5;
        font-size: 16px;
    }
    .poem-line {
        display: block;
        line-height: 1.2;
        margin: 10px 0;
    }

    .poem-rating-wrapper {
        margin-top: 40px;
    }

    .poem-rating {
        color: #F2CB8D;

        &:after {
            color: #f39c12;
            content: attr(data-poem-rating);
        }

        &.poem-is-rated {
            color: #e67e22;
        }
    }

    @mixin star-icons($amount) {
        & {
            .icon {
                display: none;
            }
            .icon-empty {
                display: inline-block;
                color: #e6ba75;
            }

            @if $amount > 0 {
                $floored_amount: floor($amount);
                @for $i from 1 through $floored_amount {
                    .star-#{$i} {
                        .icon {
                            display: none;
                        }
                        .icon-full {
                            display: inline-block;
                        }
                    }
                }
                @if $floored_amount != $amount {
                    .star-#{ceil($amount)} {
                        .icon {
                            display: none;
                        }
                        .icon-half {
                            display: inline-block;
                        }
                    }
                }
            }
        }
        &:hover {
            .icon {
                display: none;
            }
            .icon-full {
                color: #e67e22;
                display: inline-block;
            }
        }
        .star-set:hover ~ .star-set {
            .icon {
                display: none;
            }
            .icon-empty {
                display: inline-block;
            }
        }
    }

    .poem-rating-0 {
        @include star-icons(0);
    }
    .poem-rating-0-5 {
        @include star-icons(0.5);
    }
    .poem-rating-1 {
       @include star-icons(1);
    }
    .poem-rating-1-5 {
        @include star-icons(1.5);
    }
    .poem-rating-2 {
        @include star-icons(2);
    }
    .poem-rating-2-5 {
        @include star-icons(2.5);
    }
    .poem-rating-3 {
        @include star-icons(3);
    }
    .poem-rating-3-5 {
        @include star-icons(3.5);
    }
    .poem-rating-4 {
        @include star-icons(4);
    }
    .poem-rating-4-5 {
        @include star-icons(4.5);
    }
    .poem-rating-5 {
        @include star-icons(5);
    }
}

.f-dropdown {
    border: 1px solid #e67e22;
    padding: 0;
    right: 15px !important;
    top: 100% !important;
    width: auto;

    &.open {
        left: 15px !important;
    }
    &:before {
        left: auto !important;
        right: 17px !important;
    }
    &:after {
        border: 0 none !important;
    }

    li {
        color: #f39c12 !important;

        &:focus,
        &:hover {
            background: none #e67e22;
            color: #fff !important;
        }
    }

    a {
        color: inherit !important;
    }
}
.split-button-wrapper {
    display: table;
    width: 100%;
}
.button.split {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
    display: table-cell;
    padding: 8px 10px;
}
.split-button-icon {
    background: #e67e22;
    border-bottom-right-radius: 1px;
    border-left: 1px solid #ffcca0;
    border-top-right-radius: 1px;
    cursor: pointer;
    display: table-cell;
    min-width: 50px;
    transition: background-color 300ms ease-out;
    width: 50px;
}
button,
.button,
.split-button-icon {
    &:hover,
    &:focus {
        background-color: #ce7323;
    }
}
@media #{$small-only} {
    header.main {
        margin-bottom: 0;
    }
    .site-icon {
        margin-top: 15px;
    }
    .site-name {
        margin: 20px 0 0;
        font-size: 44px;
    }

    .form-action {
        margin-top: 20px;
    }
    .form-control {
        margin: 20px 0;
    }
}
@media all and (max-width: 335px) {
    button,
    .button {
        font-size: 16px;
        padding-left: 5px;
        padding-right: 5px;
    }
    .split-button-icon {
        width: 45px;
        min-width: 45px;
        i {
            font-size: 14px;
        }
    }
}

